--- a/main.css
+++ b/main.css
@@ -1,10 +1,7 @@
-body {
-  background:#000 ;
-  color: #fff;
-}
 .lista-de-gatos {color:rgb(38, 107, 255)}
 
-h1 {color:cornflowerblue}
+h1 {
+    }
 h1 { font-size: 150px;
   font-family: 'Pacifico', cursive; 
 }
@@ -36,7 +33,7 @@ img {
 }
 
 body {
-  background-color:silver ;
+  background:#09a082;
 }
 z {
   font-size: 20px;
